--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "python.linting.pylintEnabled": false,
     "python.formatting.provider": "yapf",
+    "python.formatting.yapfArgs": [
+        "--style='{based_on_style: chromium, indent_width: 4}'"
+    ],
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
